--- a/.github/workflows/Docker_image.yaml
+++ b/.github/workflows/Docker_image.yaml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - name: checkout code
         uses: actions\checkout@v4
+        path: .
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
