--- a/.github/workflows/Docker_image.yaml
+++ b/.github/workflows/Docker_image.yaml
@@ -8,8 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
-        uses: actions\checkout@v4
-        path: .
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
