--- a/.github/workflows/Docker_image.yaml
+++ b/.github/workflows/Docker_image.yaml
@@ -25,6 +25,16 @@ jobs:
         run: |
           docker images
           
+      - name: Scan docker image with trivy
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: 'docker-container-nodejs:latest'
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+          
         
       
       
